# autoconfig

./: README.md  pyproject.toml
autoconfig/: autoconfig.py
