
[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "autoconfig"
version = "0.1.0"
dependencies = []
readme = "README.md"
requires-python = ">=3.8"
keywords = ["commons", "util"]
classifiers = [
    "Programming Language :: Python :: 3",
]

[tool.setuptools]
packages = ["autoconfig"]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov[all]"
]